All QnA/Python QnA Set 2
                                                                  Python Excercise:2
1. Create a variable called break and assign it a value of 5. See what happens and find out the reason behind the behaviour that you see.
break=5
print(break)
OUTPUT:
[Running] python -u "/config/workspace/practice.py"
  File "/config/workspace/practice.py", line 1
    break=5
         ^
SyntaxError: invalid syntax

2. Create two variables. One to store your birth year and another one to store your current year. Now calculate your age using these two variables
Recent_Year=2023
Birth_Year=1996
age=Recent_Year-Birth_Year
print(age)

OUTPUT:
27

3. Store your first, middle and last name in three different variables and then print your full name using these variables
First_Name="Priyanka"
Middle_Name="Umesh"
Last_Name="Pal"
print(First_Name+" " + Middle_Name+" " + Last_Name)

OUTPUT:
Priyanka Umesh Pal

4. Answer which of these are invalid variable names: _nation, 1record, record1, record_one, record-one, record^one, continue
Valid Variables: record_one, _nation
Invalid Variables:1record, record1, record-one, record^one, continue

5. You have a football field that is 92 meters long and 48.8 meters wide. Find out the total area using Python and print it.
length=92
width=48.8
area=length*width
print(area)

OUTPUT:
4489.599999999999

6. You bought 9 packets of potato chips from a store. Each packet costs 1.49 dollars and you gave the shopkeeper 20 dollars. Find out using Python, how many dollars is the shopkeeper going to give you back?
a=9
b=1.49
c=20
print(c-(a*b))

OUTPUT:
6.59

7. You want to replace tiles in your bathroom which is exactly square and 5.5 feet is its length. If tiles cost 500 rs per square foot, how much will be the total cost to replace all tiles. Calculate and print the cost using python (Hint: Use power operator ** to find area of a square)
length=5.5
area=length**2
cost= area*500
print(cost)

OUTPUT:
15125.0

8. Print binary representation of number 17
num=17
print("Binary num of 17:", format(17,'b'))

OUTPUT:
Binary num of 17: 10001
